<resources>

    <!-- General -->
    <string name="app_name">Book Store</string>
    <string name="empty_view_title_text">No books in your inventory.</string>
    <string name="orientation_usage">To add books in your inventory, click in the floating button in this screen.
        The fields name, price and quantity of books are required.
    </string>
    <string name="inventory_fragment">Inventory</string>

    <!-- form sections -->
    <string name="book_section_label">Book</string>
    <string name="supplier_section_label">Supplier</string>

    <!-- edit hints -->
    <string name="name_edit_text">Name</string>
    <string name="genre_edit_text">Genre</string>
    <string name="price_edit_text">Price</string>
    <string name="quantity_edit_text">Quantity</string>
    <string name="phone_edit_text">Phone</string>

    <!-- title -->
    <string name="add_book_title">Add book</string>
    <string name="edit_book_title">Edit book</string>
    <string name="detail_book_title">Detail book</string>

    <!-- actions -->
    <string name="sell_action">Sale</string>
    <string name="delete_action">Delete</string>
    <string name="edit_action">Edit</string>
    <string name="save_action">Save</string>
    <string name="inventory_action">Inventory</string>
    <string name="cancel_action">Cancel</string>
    <string name="discard_action">Discard</string>
    <string name="keep_edit_action">Keep Editing</string>

    <!-- toasty messages -->
    <string name="error_saving_toasty">Error saving book</string>
    <string name="saved_book_toasty">Book saved</string>
    <string name="error_updating_toasty">Error updating book</string>
    <string name="book_updated_toasty">Book updated</string>
    <string name="book_delete_failed_toasty">Error with deleting book</string>
    <string name="book_deleted_successfully">Book deleted</string>
    <string name="delete_all_menu">Delete all books</string>
    <string name="delete_all_entries_dialog">Delete all entries??</string>
    <string name="mass_delete_success"> entries deleted</string>
    <string name="no_items_for_sale_toasty">There is no item for sale anymore.</string>
    <string name="valid_attribute_message">Please enter a valid value for the attribute {attr}.</string>

    <!-- exceptions message -->
    <string name="illegal_state_get_type">Unknown URI {uri} with match {match}</string>
    <string name="illegal_argument_query_unknown_uri">Cannot query unknown URI</string>

    <!-- validation messages -->
    <string name="name_field_validation">The name of the book must be informed.</string>
    <string name="price_field_validation">The price should be a positive value.</string>
    <string name="quantity_field_validation">The quantity can not be empty or a negative value.</string>

    <!-- alert messages and labels -->
    <string name="delete_book__message_dialog">Delete this book entry?</string>
    <string name="discard_message_dialog">Discard your changes and quit editing?</string>
    <string name="preference_settings_label">Settings</string>
    <string name="quantifier_edit_text_preference">Quantifier</string>

    <!-- settings -->
    <string name="settings_quantifier_key">quantifier</string>
    <string name="editor_mode_key">viewMode</string>
    <string name="settings_quantifier_default">1</string>
    <string name="default_currency_symbol">$</string>

</resources>
