<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <item
        android:id="@+id/action_edit"
        android:title="@string/edit_action"
        android:icon="@drawable/ic_edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save"
        android:title="@string/save_action"
        android:icon="@drawable/ic_done"
        app:showAsAction="always"
        android:visible="false" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_action"
        android:icon="@drawable/ic_delete"
        app:showAsAction="always"/>

</menu>