<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EditorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/ItemStyle"
                android:text="@string/book_section_label" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <TextView
                    android:id="@+id/name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_edit_text"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/name_edit_text"
                    style="@style/EditorFieldStyle"
                    android:inputType="textCapWords" />

                <TextView
                    android:id="@+id/genre_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_edit_text"
                    android:visibility="visible" />


                <EditText
                    android:id="@+id/genre_edit_text"
                    style="@style/EditorFieldStyle"
                    android:inputType="textCapWords"
                    android:lines="5" />

                <TextView
                    android:id="@+id/price_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_edit_text"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/price_edit_text"

                    style="@style/EditorFieldStyle"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity_edit_text"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/quantity_edit_text"
                    style="@style/EditorFieldStyle"
                    android:inputType="number" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageButton
                        android:id="@+id/quantity_down_image_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_remove"
                        android:visibility="visible" />

                    <ImageButton
                        android:id="@+id/quantity_up_image_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_add"
                        android:visibility="visible" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/ItemStyle"
                android:text="@string/supplier_section_label" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <TextView
                    android:id="@+id/supplier_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_edit_text"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/supplier_name_edit_text"
                    style="@style/EditorFieldStyle"
                    android:inputType="textCapWords" />

                <TextView
                    android:id="@+id/phone_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_edit_text"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/supplier_phone_edit_text"
                    style="@style/EditorFieldStyle"
                    android:layout_weight="1"
                    android:inputType="phone" />

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/supplier_phone_fab"
                    android:src="@drawable/ic_call"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/fab_margin"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</FrameLayout>